<resources>
    <string name="app_name">Firebase</string>
    <string name="play_sound">play sound</string>
    <string name="show_data">show data</string>
    <string name="name_input"></string>
    <string name="login">login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="home">Home</string>
    <string name="homeName" />
    <string name="logout">Logout</string>
    <string name="time"></string>
    <string name="squat">Squats</string>
    <string name="pushups">Pushups</string>
    <string name="pushupTimer">Time</string>
    <string name="weight">weight</string>
    <string name="height">height</string>
    <string name="Get_BMI">Get BMI</string>
    <string name="input_bmi">Input your height and weight and get your BMI</string>
    <string name="squatTimeLeft" />
    <string name="backBendTimer" />
    <string name="situpTimer" />
    <string name="workoutDone" />
    <string name="workoutDoneBtn">Go Home</string>
    <string name="joinCompBtn">Join Competition</string>
    <string name="createCompBtn">Create Competition</string>
    <string name="newCompInfo" />
    <string name="createCompTxt">Create a competition by clicking the button</string>
    <string name="joinCompTxt">Join an existing competition by writing the CompID in the field below</string>
    <string name="compStatus" />
    <string name="theMagicPlaceDude">this is the magic place. enjoy :)</string>
    <string name="vibes_magic">vibes</string>
    <string name="zen_magic">zen</string>
    <string name="choose_difficulty">Choose Difficulty</string>
    <string name="easy">Easy</string>
    <string name="hardBtn">Hard</string>
    <string name="mediumBtn">Medium</string>
</resources>