<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sub_btn_background"

    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Notifications">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimaryTet"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="Notifications"
            android:textColor="@color/prettyRed"
            android:textSize="40dp" />


    </RelativeLayout>

    <TextView
        android:id="@+id/joinCompHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="60dp"
        android:layout_marginBottom="50dp"
        android:text="Join Competition"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/joinCompTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="-44dp"
        android:layout_marginBottom="5dp"
        android:textSize="18dp"
        android:text="Join an existing competition by writing the CompId in the field below"
        android:textColor="@color/white"

        />

    <EditText
        android:id="@+id/joinCompInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edit_bg"
        android:backgroundTint="@color/white"
        android:inputType="text"
        android:paddingHorizontal="15dp"
        android:paddingVertical="12dp"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="336dp" />

    <Button
        android:id="@+id/joinCompBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_bg"
        android:text="@string/joinCompBtn"
        android:textColor="#fafafa"


        />

    <TextView
        android:id="@+id/createCompTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="10dp"
        android:textSize="18dp"
        android:text="@string/createCompTxt"
        android:textColor="@color/darkwhite" />

    <Button
        android:id="@+id/createCompBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_bg"
        android:text="@string/createCompBtn"
        android:textColor="#fafafa"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="469dp" />


    <TextView
        android:id="@+id/newCompInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="10dp"
        android:text=""
        android:textColor="@color/darkwhite"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="517dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginBottom="-43dp"
        android:background="@color/colorPrimaryTet"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation"


        />

</LinearLayout>